Unreviewed, suppress exception checking warnings https://bugs.webkit.org/show_bug.cgi?id=256604 rdar://109102351

Just suppressing exception checking warnings for Debug builds.

* Source/JavaScriptCore/runtime/LiteralParser.cpp:
(JSC::LiteralParser<CharType>::parseRecursively):

Canonical link: https://commits.webkit.org/263918@main